Added shopping list activity
Added a menu to name a new shopping list. This then switches to a
shopping list activity, with the ability to add items. Nearly done with
milestone.

--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -11,13 +11,13 @@
         android:id="@+id/listView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/button" />
+        android:layout_above="@+id/addButton" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New List"
-        android:id="@+id/button"
+        android:id="@+id/addButton"
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/listView" />
 </RelativeLayout>
