--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ShoppingList">
 
     <com.getbase.floatingactionbutton.AddFloatingActionButton
-        android:id="@+id/addButton"
+        android:id="@+id/float_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         fab:fab_plusIconColor="#FFFFFF"
