--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -6,20 +6,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ShoppingList">
 
-    <com.getbase.floatingactionbutton.AddFloatingActionButton
-        android:id="@+id/float_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        fab:fab_plusIconColor="#FFFFFF"
-        fab:fab_colorNormal="#23ff14"
-        fab:fab_colorPressed="#18d50f"
-        android:layout_marginLeft="275dp"
-        android:layout_marginTop="400dp"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_row="25"
+        android:layout_column="17">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        <com.getbase.floatingactionbutton.AddFloatingActionButton
+            android:id="@+id/float_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_plusIconColor="#FFFFFF"
+            fab:fab_colorNormal="#23ff14"
+            fab:fab_colorPressed="#18d50f"
+            android:layout_gravity="right|bottom" />
+    </FrameLayout>
 </RelativeLayout>
