--- a/app/src/main/res/layout/addlistmenu.xml
+++ b/app/src/main/res/layout/addlistmenu.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="wrap_content"
+    android:clickable="true"
+    android:orientation="vertical"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:background="#bababa"
+    android:layout_alignParentStart="true"
+    android:longClickable="false">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center_horizontal"
+        android:text="Add a new list"
+        android:id="@+id/textView"/>
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:singleLine="true"
+        android:inputType="text"
+        />
+
     <LinearLayout android:id="@+id/linerLayout_send_button_row"
         android:orientation="horizontal"
         android:paddingLeft="4.0dip"
@@ -10,8 +36,7 @@
         android:paddingBottom="1.0dip"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-
+        style="?android:attr/buttonBarStyle"
         >
         <Button
             android:layout_width="0dp"
@@ -20,8 +45,9 @@
             android:text="Cancel"
             android:id="@+id/listCancel"
             android:gravity="center"
-            android:layout_alignTop="@+id/listAdd"
-            android:layout_alignParentEnd="true" />
+            style="android:attr/buttonBarButtonStyle"
+            />
+
         <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
@@ -29,29 +55,9 @@
             android:text="Add"
             android:id="@+id/listAdd"
             android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            style="android:attr/buttonBarButtonStyle"
+            />
     </LinearLayout>
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:singleLine="true"
-        android:layout_above="@+id/linerLayout_send_button_row"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:gravity="center_horizontal"
-        android:text="Add a new list"
-        android:id="@+id/textView"
-        android:layout_above="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+</LinearLayout>
 
 
-</RelativeLayout>
