Fixed Listview Issue.
The problem was that the Listview was added to the wrong screen, and the
code couldn't locate it.

--- a/app/src/main/res/layout/activity_current_list.xml
+++ b/app/src/main/res/layout/activity_current_list.xml
@@ -25,4 +25,9 @@
             android:layout_gravity="right|bottom" />
     </FrameLayout>
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/currentItems"/>
+
 </RelativeLayout>
