--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -25,6 +25,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/currentItems"
+        android:id="@+id/shoppingLists"
         android:visibility="visible" />
 </RelativeLayout>
