--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="horizontal" >
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
+    android:onClick="layoutClick">
 <CheckBox
-    android:id="@+id/checkBox1"
+    android:id="@+id/checkBox"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text=""
-    android:textSize="22sp"/>
+    android:textSize="22sp"
+    android:focusable="false"
+    android:layout_marginRight="10dp"/>
 <TextView
-    android:id="@+id/textView1"
+    android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="TextView"
-    android:textSize="22sp"/>
+    android:textSize="22sp"
+    android:onClick="textClick"/>
 
 </LinearLayout>
