--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -13,7 +13,8 @@
     android:layout_height="wrap_content"
     android:textSize="22sp"
     android:focusable="false"
-    android:layout_marginRight="10dp"/>
+    android:layout_marginRight="10dp"
+    android:onClick="checkBoxClick"/>
 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
