--- a/app/src/main/res/layout/activity_current_list.xml
+++ b/app/src/main/res/layout/activity_current_list.xml
@@ -9,11 +9,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.aisleshare.CurrentList">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/currentItems"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_row="25"
-        android:layout_column="17">
+        android:layout_alignParentTop="true">
 
         <com.getbase.floatingactionbutton.AddFloatingActionButton
             android:id="@+id/float_button"
@@ -22,12 +26,7 @@
             fab:fab_plusIconColor="#FFFFFF"
             fab:fab_colorNormal="#23ff14"
             fab:fab_colorPressed="#18d50f"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"/>
     </FrameLayout>
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/currentItems"/>
 
 </RelativeLayout>
