--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,29 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linearLayout"
-    android:tag="linearLayout"
+    android:id="@+id/row"
+    android:tag="row"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
     android:onClick="itemClick">
-<CheckBox
-    android:id="@+id/checkBox"
-    android:tag="checkBox"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="22sp"
-    android:focusable="false"
-    android:layout_marginRight="10dp"
-    android:onClick="itemClick"/>
-<TextView
-    android:id="@+id/textView"
-    android:tag="textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="TextView"
-    android:textSize="22sp"
-    android:onClick="itemClick"/>
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:tag="checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:layout_marginRight="10dp"
+        android:onClick="itemClick"
+        android:layout_gravity="center_vertical"
+        android:scaleX="1.25"
+        android:scaleY="1.25"/>
+    <LinearLayout
+        android:id="@+id/column"
+        android:tag="column"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical">
+        <TextView
+            android:id="@+id/name"
+            android:tag="name"
+            android:text="Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:onClick="itemClick"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/type"
+            android:tag="type"
+            android:text="Type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:onClick="itemClick"
+            android:textColor="#6b6b6b"
+            android:textStyle="italic" />
+    </LinearLayout>
+
 
 </LinearLayout>
