--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -1,16 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="com.aisleshare.CurrentList">
-    <item android:id="@+id/sort_name"
-        android:title="Sort by Name"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item android:id="@+id/sort_type"
-        android:title="Sort by Type"/>
-    <item android:id="@+id/sort_time"
-        android:title="Sort by Time"/>
-    <item android:id="@+id/sort_quantity"
-        android:title="Sort by Quantity"/>
+    <item
+        android:title="Sort  "
+        android:orderInCategory="101"
+        app:showAsAction="ifRoom|withText">
+        <menu
+            android:id="@+id/sort">
+            <item android:id="@+id/sort_name"
+                android:title="By Name"/>
+            <item android:id="@+id/sort_type"
+                android:title="By Type"/>
+            <item android:id="@+id/sort_time"
+                android:title="By Time"/>
+            <item android:id="@+id/sort_quantity"
+                android:title="By Quantity"/>
+        </menu>
+    </item>
+
     <!--   <item android:id="@+id/sort_custom"
         android:title="Custom Sort"/>   -->
 </menu>
