--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -21,6 +21,15 @@
             fab:fab_colorPressed="#18d50f"
             android:layout_gravity="right|bottom"
             android:alpha=".75" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You do not have any lists."
+            android:id="@+id/empty_notice"
+            android:layout_gravity="center"
+            android:textSize="14sp"
+            android:visibility="invisible" />
     </FrameLayout>
 
     <ListView
