--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:onClick="itemClick"
-    android:longClickable="true">
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -92,7 +90,7 @@
             android:layout_height="match_parent"
             android:id="@+id/txt_delete"
             android:gravity="center_vertical"
-            android:text="Deleted"
+            android:text="Swipe to Confirm"
             android:clickable="false"
             android:layout_weight="2"
             android:hapticFeedbackEnabled="true"
