--- a/app/src/main/res/layout/add_item_dialog.xml
+++ b/app/src/main/res/layout/add_item_dialog.xml
@@ -56,7 +56,8 @@
             android:textSize="22dp"
             android:layout_gravity="bottom"
             android:minWidth="20dp"
-            android:maxWidth="70dp" />
+            android:maxWidth="70dp"
+            android:maxLength="5"/>
 
         <EditText
             android:layout_width="wrap_content"
@@ -70,7 +71,8 @@
             android:gravity="center_horizontal"
             android:layout_gravity="bottom"
             android:minWidth="20dp"
-            android:maxWidth="70dp" />
+            android:maxWidth="70dp"
+            android:maxLength="10"/>
 
         <Button
             android:id="@+id/Plus"
