--- a/app/src/main/res/layout/recipes.xml
+++ b/app/src/main/res/layout/recipes.xml
@@ -1,14 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context=".ShoppingList">
+    tools:context=".Recipes">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_row="25"
-        android:layout_column="17">
+        android:layout_height="match_parent">
 
         <com.getbase.floatingactionbutton.AddFloatingActionButton
             android:id="@+id/float_button"
@@ -23,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You do not have any lists."
+            android:text="You do not have any recipes."
             android:id="@+id/empty_notice"
             android:layout_gravity="center"
             android:textSize="14sp"
@@ -33,6 +32,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/shoppingLists"
+        android:id="@+id/recipes"
         android:visibility="visible" />
 </RelativeLayout>
