--- a/app/src/main/res/layout/dialog_add_name.xml
+++ b/app/src/main/res/layout/dialog_add_name.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:inputType="text"
+        android:inputType="text|textCapWords"
         android:singleLine="true"
         android:hint="Name"/>
 
