--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -1,9 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context=".Recipes">
+    tools:context=".ShoppingList">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -22,7 +24,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You do not have any recipes."
+            android:text="You do not have any lists."
             android:id="@+id/empty_notice"
             android:layout_gravity="center"
             android:textSize="14sp"
@@ -32,6 +34,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/recipes"
+        android:id="@+id/lists"
         android:visibility="visible" />
 </RelativeLayout>
