--- a/app/src/main/res/menu/menu_current_list.xml
+++ b/app/src/main/res/menu/menu_current_list.xml
@@ -4,7 +4,8 @@
     <item
         android:title="Share"
         android:id="@+id/share"
-        app:showAsAction="ifRoom|withText"
+        app:showAsAction="ifRoom"
+        android:icon="@mipmap/share_list"
         />
     <item
         android:title="Sort"
@@ -13,15 +14,15 @@
         <menu
             android:id="@+id/sort">
             <item android:id="@+id/sort_time"
-                android:title="Time Created"/>
+                android:title="Sort By Time"/>
             <item android:id="@+id/sort_name"
-                android:title="Name"/>
+                android:title="Sort By Name"/>
             <item android:id="@+id/sort_type"
-                android:title="Type"/>
+                android:title="Sort By Type"/>
             <item android:id="@+id/sort_quantity"
-                android:title="Quantity"/>
+                android:title="Sort By Quantity"/>
             <item android:id="@+id/sort_owner"
-                android:title="Owner"/>
+                android:title="Sort By Owner"/>
             <item android:id="@+id/unsorted"
                 android:title="Turn Off Sort"/>
             <!--   <item android:id="@+id/sort_custom"
@@ -29,7 +30,7 @@
         </menu>
     </item>
     <item
-        android:title="Delete"
+        android:title="Delete Items..."
         android:id="@+id/delete_items"
         app:showAsAction="ifRoom"
         android:icon="@mipmap/trash"/>
