Backgrounds for Lists/Recipes/Activities

--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".Activities">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/list_image"
+            android:src="@mipmap/activity"
+            android:layout_centerInParent="true"
+            android:alpha=".25"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
