--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".ShoppingList">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/list_image"
+            android:src="@mipmap/list"
+            android:layout_centerInParent="true"
+            android:alpha=".25"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
